--- a/tests/parsers/data/generator/rectangle_filled/config.ini
+++ b/tests/parsers/data/generator/rectangle_filled/config.ini
@@ -1,5 +1,5 @@
 [file_names]
-test_name = test_abc
+test_name = rectangle_filled
 generator = generator.py
 expected = expected.csv
 actual = actual.csv
