--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -33,7 +33,7 @@ jobs:
       uses: psf/black@stable
       with: 
         options: "--check --verbose"
-        src: "./src"
+        src: "."
         version: "~= 22.0"
     - name: Test with pytest
       run: |
