--- a/.github/workflows/verilog-simulation.yml
+++ b/.github/workflows/verilog-simulation.yml
@@ -14,4 +14,4 @@ jobs:
     - name: Simulate Verilog Tests
       run: |
         iverilog -s generator_tb  tests/parsers/data/generator/circle_lines/module.sv tests/parsers/data/generator/circle_lines/testbench.sv && unbuffer vvp a.out > output.txt
-        echo output.txt
+        cat output.txt
