--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -35,6 +35,13 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Download Icarus Verilog and Utilities
+      run: |
+        sudo apt-get install iverilog
+        sudo apt-get install expect
+    - name: Simulate Verilog Tests
+      run: |
+        bash tests/parsers/iverilog_sim_cmds.sh
     - name: Test with pytest
       run: |
         python3 -m pytest
