--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,16 +9,16 @@ repos:
     rev: 22.10.0
     hooks:
     -   id: black
--   repo: https://github.com/pycqa/pylint
-    rev: v2.17.4
-    hooks:
-    -   id: pylint
-        name: pylint
-        entry: pylint
-        language: system
-        types: [python]
-        args:
-            [
-            "-rn", # Only display messages
-            "-sn", # Don't display the score
-            ]
+# -   repo: https://github.com/pycqa/pylint
+#     rev: v2.17.4
+#     hooks:
+#     -   id: pylint
+#         name: pylint
+#         entry: pylint
+#         language: system
+#         types: [python]
+#         args:
+#             [
+#             "-rn", # Only display messages
+#             "-sn", # Don't display the score
+#             ]
