--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
+    rev: v4.4.0
     hooks:
     -   id: check-yaml
     -   id: end-of-file-fixer
@@ -9,3 +9,16 @@ repos:
     rev: 22.10.0
     hooks:
     -   id: black
+# -   repo: https://github.com/pycqa/pylint
+#     rev: v2.17.4
+#     hooks:
+#     -   id: pylint
+#         name: pylint
+#         entry: pylint
+#         language: system
+#         types: [python]
+#         args:
+#             [
+#             "-rn", # Only display messages
+#             "-sn", # Don't display the score
+#             ]
