--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,4 +21,6 @@ jobs:
     - name: Analysing the code with pylint
       run: |
         # pylint $(git ls-files '*.py') # ignore test files for now
-        pylint -d W0511 ./python2verilog/ # ignores fixme
+        pylint ./python2verilog/ -d \ # Ignoring:
+          W0511 \ # fixme
+          R0903 # too-few-public-methods
