added iverilog cmd to pytest

--- a/tests/frontend/data/generator/rectangle_filled/config.ini
+++ b/tests/frontend/data/generator/rectangle_filled/config.ini
@@ -10,3 +10,6 @@ module = module.sv
 testbench = testbench.sv
 visual = visual.log
 ast_dump = ast_dump.log
+
+[commands]
+simulate = iverilog -s generator_tb data/generator/rectangle_filled/module.sv data/generator/rectangle_filled/testbench.sv && unbuffer vvp a.out > data/generator/rectangle_filled/actual.csv && cat data/generator/rectangle_filled/actual.csv
