--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,4 +21,5 @@ jobs:
     - name: Analysing the code with pylint
       run: |
         # pylint $(git ls-files '*.py') # ignore test files for now
-        pylint -d W0511 ./python2verilog/ # ignores fixme
+        # Ignoring: fixme, too-few-public-methods
+        pylint ./python2verilog/ -d W0511,R0903
