--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -22,4 +22,6 @@ jobs:
       run: |
         # pylint $(git ls-files '*.py') # ignore test files for now
         # Ignoring: fixme, too-few-public-methods
-        pylint ./python2verilog/ -d W0511,R0903
+        pylint ./python2verilog/ -d >
+          W0511,>
+          R0903
