--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -42,3 +42,7 @@ jobs:
     - name: Test with pytest
       run: |
         python3 -m pytest --verbose
+    - uses: actions/upload-artifact@v3
+      with:
+        name: data-generator
+        path: tests/frontend/data/generator/
