--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -19,7 +19,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install pylint
     - name: Analysing the code with pylint
-      run: |
+      run: |-
         # pylint $(git ls-files '*.py') # ignore test files for now
         # Ignoring: fixme, too-few-public-methods
         pylint ./python2verilog/ -d >
