--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -19,10 +19,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install pylint
       - name: Analysing the code with pylint
-        # pylint $(git ls-files '*.py') # ignore test files for now
-        # Ignoring: fixme, too-few-public-methods
         run: |
-          "pylint ./python2verilog/ -d \
-          W0511,\
-          R0903\
-          "
+          # pylint $(git ls-files '*.py') # ignore test files for now
+          # Ignoring: fixme, too-few-public-methods
+          pylint ./python2verilog/ -d W0511,R0903
