--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -42,6 +42,9 @@ jobs:
     - name: Test with pytest
       run: |
         python3 -m pytest --verbose
+    - name: Update stats
+      run: |
+        python3 tests/frontend/data/generator/update_statistics.py
     - uses: actions/upload-artifact@v3
       with:
         name: data-generator
