--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
+        python -m pip install flake8 pytest pandas tabulate
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -42,3 +42,10 @@ jobs:
     - name: Test with pytest
       run: |
         python3 -m pytest --verbose
+    - name: Update stats
+      run: |
+        python3 tests/frontend/data/generator/update_statistics.py
+    - uses: actions/upload-artifact@v3
+      with:
+        name: data-generator
+        path: tests/frontend/data/generator/
