--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Analysing the code with pylint
         run: |
           # pylint $(git ls-files '*.py') # ignore test files for now
-          # Ignoring: fixme, too-few-public-methods
-          pylint ./python2verilog/ -d W0511,R0903
+          # Ignoring: fixme, too-few-public-methods, duplicate-code, unreachable
+          pylint ./python2verilog/ -d W0511,R0903,R0801,W0101
