--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -22,4 +22,4 @@ jobs:
         run: |
           # pylint $(git ls-files '*.py') # ignore test files for now
           # Ignoring: fixme, too-few-public-methods, duplicate-code, unreachable
-          pylint python2verilog/ --rcfile=pylint.toml
+          pylint python2verilog/ --rcfile=.pylintrc
