--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,5 +21,5 @@ repos:
             [
             "-rn", # Only display messages
             "-sn", # Don't display the score
-            "-rcfile pylint.toml"
+            "--rcfile=.pylintrc"
             ]
