--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Test with pytest
       run: |
         python3 -m pytest --verbose
-    - name: Update stats
+    - name: Update stats and upload artifacts
       run: |
         python3 tests/frontend/data/generator/update_statistics.py
     - uses: actions/upload-artifact@v3
