--- a/tests/frontend/data/generator/rectangle_filled_while/config.ini
+++ b/tests/frontend/data/generator/rectangle_filled_while/config.ini
@@ -7,5 +7,6 @@ expected = expected.csv
 actual = actual.csv
 module = module.sv
 testbench = testbench.sv
-visual = visual.log
+expected_visual = expected_visual.png
+actual_visual = actual_visual.png
 ast_dump = ast_dump.log
