filtered_actual added

--- a/tests/integration/data/integration/defaults/config.ini
+++ b/tests/integration/data/integration/defaults/config.ini
@@ -10,3 +10,4 @@ testbench = testbench.sv
 expected_visual = expected_visual.png
 actual_visual = actual_visual.png
 ast_dump = ast_dump.log
+filtered_actual = filtered_actual.csv
