--- a/.pylintrc
+++ b/.pylintrc
@@ -1,5 +1,8 @@
+[BASIC]
+good-names=i, j, k, a, b, c, d, e, f
+
 [FORMAT]
 # variable-rgx="[a-z_][a-z0-9_]{0,30}$"
 
 [MESSAGES CONTROL]
-disable = fixme, too-few-public-methods, duplicate-code, unreachable, unused-import, exec-used, import-error
+disable = fixme, too-few-public-methods, duplicate-code, unreachable, unused-import, exec-used, import-error, too-many-return-statements
