--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -26,6 +26,6 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8
         python -m pip install sphinx
-    - name: Lint with flake8
+    - name: Sphinx Build
       run: |
-        cd docs/ && make html
+        cd docs/ && python -m sphinx -T -E -b html -d _build/doctrees -D language=en . _build/html
