--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Download Icarus Verilog and Utilities
       run: |
         sudo apt-get install iverilog expect
-    - name: Test with pytest
+    - name: Run Pytest
       run: |
         python3 -m pytest --verbose
     - name: Update Stats
