--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -29,6 +29,6 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8
         python -m pip install sphinx
-    - name: Sphinx Build
+    - name: Build Sphinx
       run: |
         cd docs/ && python -m sphinx -T -E -b html -d _build/doctrees -D language=en . _build/html
