Update README.md and Workflows (#42)

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,4 +1,7 @@
-name: Pylint
+# Runs Pylint
+# Locally run `pre-commit install` then commit
+
+name: Pylint Linting
 
 on:
   push:
@@ -11,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.11"]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
