--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,7 +1,7 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+# Runs flake8
+# Locally run `pre-commit install` then commit (Pylint should include flake8)
 
-name: Python package
+name: Python Package
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.11"]
 
     steps:
     - uses: actions/checkout@v3
@@ -28,7 +28,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8
-        python -m pip install -r tests/requirements.txt
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -36,17 +35,3 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Download Icarus Verilog and Utilities
-      run: |
-        sudo apt-get install iverilog expect
-    - name: Test with pytest
-      run: |
-        python3 -m pytest --verbose
-    - name: Update Stats
-      run: |
-        python3 tests/update_statistics.py tests/integration/data/integration/ && \
-        python3 tests/update_statistics.py tests/frontend/data/generator/
-    - uses: actions/upload-artifact@v3
-      with:
-        name: data-generator
-        path: tests/
