--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,26 +1,30 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
-    hooks:
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
--   repo: https://github.com/psf/black
-    rev: 22.10.0
-    hooks:
-    -   id: black
--   repo: https://github.com/pycqa/pylint
-    rev: v2.17.4
-    hooks:
-    -   id: pylint
-        name: pylint
-        entry: pylint
-        language: system
-        types: [python]
-        files: python2verilog/
-        args:
-            [
-            "-rn", # Only display messages
-            "-sn", # Don't display the score
-            "--rcfile=.pylintrc",
-            ]
+    - repo: https://github.com/pre-commit/pre-commit-hooks
+      rev: v4.4.0
+      hooks:
+          - id: check-yaml
+          - id: end-of-file-fixer
+          - id: trailing-whitespace
+    - repo: https://github.com/psf/black
+      rev: 22.10.0
+      hooks:
+          - id: black
+    - repo: https://github.com/pycqa/pylint
+      rev: v2.17.4
+      hooks:
+          - id: pylint
+            name: pylint
+            entry: pylint
+            language: system
+            types: [python]
+            files: python2verilog/
+            args: [
+                    "-rn", # Only display messages
+                    "-sn", # Don't display the score
+                    "--rcfile=.pylintrc",
+                ]
+    - repo: https://github.com/pre-commit/mirrors-mypy
+      rev: v1.4.1 # Use the sha / tag you want to point at
+      hooks:
+          - id: mypy
+            args: [--strict, --ignore-missing-imports]
