--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -34,7 +34,7 @@ jobs:
         sudo apt-get install iverilog expect
     - name: Run Pytest
       run: |
-        python3 -m pytest --verbose --all_tests
+        python3 -m pytest --verbose
     - uses: actions/upload-artifact@v3
       with:
         name: tests-data
