--- a/.pylintrc
+++ b/.pylintrc
@@ -5,4 +5,4 @@ good-names=i, j, k, a, b, c, d, e, f
 # variable-rgx="[a-z_][a-z0-9_]{0,30}$"
 
 [MESSAGES CONTROL]
-disable = fixme, too-few-public-methods, duplicate-code, unreachable, unused-import, exec-used, import-error, too-many-return-statements, too-many-arguments, abstract-method
+disable = fixme, too-few-public-methods, duplicate-code, unreachable, unused-import, exec-used, import-error, too-many-return-statements, too-many-arguments, abstract-method, too-many-instance-attributes, too-many-branches
