--- a/tests/integration/data/integration/happy_face/config.ini
+++ b/tests/integration/data/integration/happy_face/config.ini
@@ -11,3 +11,4 @@ expected_visual = expected_visual.png
 actual_visual = actual_visual.png
 ast_dump = ast_dump.log
 filtered_actual = filtered_actual.csv
+ir_dump = ir_dump.png
