--- a/.pylintrc
+++ b/.pylintrc
@@ -1,8 +1,8 @@
 [BASIC]
-good-names=i, j, k, a, b, c, d, e, f
+good-names=i, j, k, ir
 
 [FORMAT]
 # variable-rgx="[a-z_][a-z0-9_]{0,30}$"
 
 [MESSAGES CONTROL]
-disable = fixme, too-few-public-methods, duplicate-code, unreachable, unused-import, exec-used, import-error, too-many-return-statements, too-many-arguments, abstract-method, too-many-instance-attributes, too-many-branches
+disable = fixme, too-few-public-methods, duplicate-code, unreachable, unused-import, exec-used, import-error, too-many-return-statements, too-many-arguments, abstract-method, too-many-instance-attributes, too-many-branches, wildcard-import, unused-wildcard-import, mixed-line-endings, protected-access
