--- a/tests/integration/data/integration/fib/config.ini
+++ b/tests/integration/data/integration/fib/config.ini
@@ -12,3 +12,4 @@ actual_visual = actual_visual.png
 ast_dump = ast_dump.log
 filtered_actual = filtered_actual.csv
 ir_dump = ir_dump.png
+cytoscape = cytoscape.log
