--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -5,9 +5,10 @@ name: pylint linting
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
+    types: [ready_for_review]
 
 jobs:
   build:
