--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -5,13 +5,12 @@ name: pytest testing
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -19,23 +18,46 @@ jobs:
         python-version: ["3.9", "3.10", "3.11"]
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install -r tests/requirements.txt
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Download Icarus Verilog and Utilities
-      run: |
-        sudo apt-get install iverilog expect
-    - name: Run Pytest
-      run: |
-        python3 -m pytest --verbose -s --cov=python2verilog/ --cov-report term-missing --write
-    - uses: actions/upload-artifact@v3
-      with:
-        name: tests-data
-        path: tests/
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r tests/requirements.txt
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Download Icarus Verilog and Utilities
+        run: |
+          sudo apt-get install iverilog expect
+      - name: Run Pytest
+        run: |
+          python3 -m pytest --verbose -s --cov=python2verilog/ --cov-report term-missing --write
+      - uses: actions/upload-artifact@v3
+        with:
+          name: tests-data
+          path: tests/
+
+  synthesis:
+    needs: build
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install oss with yosys
+        run: |
+          wget https://github.com/YosysHQ/oss-cad-suite-build/releases/download/2023-08-02/oss-cad-suite-linux-x64-20230802.tgz
+          tar -xvzf oss-cad-suite-linux-x64-20230802.tgz
+          echo "${pwd}/oss-cad-suite/bin/yosys" >> $GITHUB_PATH
+          echo $GITHUB_PATH
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: tests-data
+          path: tests/
+      - name: Run
+        run: |
+          ./yosys -o synth.v -p hierarchy -p proc -p opt -p memory -p opt -p fsm -p opt -f verilog tests/integration/data/integration/testing/module.sv -p stat
