--- a/.github/workflows/yosys.yml
+++ b/.github/workflows/yosys.yml
@@ -4,31 +4,27 @@
 name: yosys synthesis
 
 on:
-  push:
-    branches: ["main"]
-  pull_request:
-    branches: ["main"]
+  workflow_run:
+    workflows: ["pytest testing"]
+    types:
+      - completed
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      matrix:
-        python-version: ["3.11"]
 
     steps:
       - uses: actions/checkout@v3
-      - name: Install dependencies
+      - name: Install oss with yosys
         run: |
-          sudo apt-get install build-essential clang bison flex \
-          libreadline-dev gawk tcl-dev libffi-dev git \
-          graphviz xdot pkg-config python3 libboost-system-dev \
-          libboost-python-dev libboost-filesystem-dev zlib1g-dev
-      - name: Build
+          wget https://github.com/YosysHQ/oss-cad-suite-build/releases/download/2023-08-02/oss-cad-suite-linux-x64-20230802.tgz
+          tar -xvzf oss-cad-suite-linux-x64-20230802.tgz
+          echo "${pwd}/oss-cad-suite/bin/yosys" >> $GITHUB_PATH
+          echo $GITHUB_PATH
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+      - name: Run
         run: |
-            git clone https://github.com/YosysHQ/yosys.git
-            cd yosys
-            make
-            sudo make install
-            ls
+          ./yosys -o synth.v -p hierarchy -p proc -p opt -p memory -p opt -p fsm -p opt -f verilog tests/integration/data/integration/testing/module.sv -p stat
