--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -33,8 +33,9 @@ jobs:
           sudo apt-get install iverilog expect
       - name: Run Pytest
         run: |
-          python3 -m pytest --verbose -s --cov=python2verilog/ --cov-report term-missing --write
+          python3 -m pytest --vs --cov=python2verilog/ --cov-report term-missing --write
       - uses: actions/upload-artifact@v3
+        if: always()
         with:
           name: tests-data
           path: tests/
