--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -52,8 +52,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install oss with yosys
         run: |
-          wget https://github.com/YosysHQ/oss-cad-suite-build/releases/download/2023-08-02/oss-cad-suite-linux-x64-20230802.tgz
-          tar -xvzf oss-cad-suite-linux-x64-20230802.tgz
+          wget -nv https://github.com/YosysHQ/oss-cad-suite-build/releases/download/2023-08-02/oss-cad-suite-linux-x64-20230802.tgz
+          tar -xzf oss-cad-suite-linux-x64-20230802.tgz
           echo "${pwd}/oss-cad-suite/bin/yosys" >> $GITHUB_PATH
           echo $GITHUB_PATH
       - name: Download artifacts
@@ -63,4 +63,4 @@ jobs:
           path: tests/
       - name: Run
         run: |
-          ./yosys -o synth.v -p hierarchy -p proc -p opt -p memory -p opt -p fsm -p opt -f verilog tests/integration/data/integration/testing/module.sv -p stat
+          yosys -o synth.v -p hierarchy -p proc -p opt -p memory -p opt -p fsm -p opt -f verilog tests/integration/data/integration/testing/module.sv -p stat
