--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -37,13 +37,13 @@ jobs:
 
       - name: Download oss with yosys
         run: |
-          wget https://github.com/YosysHQ/oss-cad-suite-build/releases/download/2023-08-02/oss-cad-suite-linux-x64-20230802.tgz
+          wget -nv https://github.com/YosysHQ/oss-cad-suite-build/releases/download/2023-08-02/oss-cad-suite-linux-x64-20230802.tgz
           tar -xzf oss-cad-suite-linux-x64-20230802.tgz
           echo "${GITHUB_WORKSPACE}/oss-cad-suite/bin/yosys" >> $GITHUB_PATH
 
       - name: Run Pytest
         run: |
-          python3 -m pytest -vs --cov=python2verilog/ --cov-report term-missing
+          python3 -m pytest -vs tests/ --cov=python2verilog/ --cov-report term-missing
 
       - name: Run Yosys
         if: always()
