--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           sudo apt-get install iverilog expect
 
-      - name: Download oss with yosys
+      - name: Download OSS CAD Suite for yosys
         run: |
           wget -nv https://github.com/YosysHQ/oss-cad-suite-build/releases/download/2023-08-02/oss-cad-suite-linux-x64-20230802.tgz
           tar -xzf oss-cad-suite-linux-x64-20230802.tgz
@@ -44,11 +44,6 @@ jobs:
       - name: Run Pytest
         run: |
           python3 -m pytest -vs tests/ --cov=python2verilog/ --cov-report term-missing --write --synthesis -k "test_integration.py and test_testing"
-
-      - name: Run Yosys
-        if: always()
-        run: |
-          yosys -QT -f verilog tests/integration/data/integration/testing/module.sv -p stat
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
