--- a/.pylintrc
+++ b/.pylintrc
@@ -5,4 +5,24 @@ good-names=i, j, k, ir, e
 # variable-rgx="[a-z_][a-z0-9_]{0,30}$"
 
 [MESSAGES CONTROL]
-disable = fixme, too-few-public-methods, duplicate-code, unreachable, unused-import, exec-used, import-error, too-many-return-statements, too-many-arguments, abstract-method, too-many-instance-attributes, too-many-branches, wildcard-import, unused-wildcard-import, mixed-line-endings, protected-access, too-many-locals, unused-argument, too-many-statements, logging-fstring-interpolation
+disable =
+    fixme,
+    too-few-public-methods,
+    duplicate-code,
+    unreachable,
+    unused-import,
+    exec-used,
+    import-error,
+    too-many-return-statements,
+    too-many-arguments,
+    abstract-method,
+    too-many-instance-attributes,
+    too-many-branches,
+    wildcard-import,
+    unused-wildcard-import,
+    mixed-line-endings,
+    protected-access,
+    too-many-locals,
+    unused-argument,
+    too-many-statements,
+    logging-fstring-interpolation
