Added Graph Optimizer (#56)
* Added graph visualization tool for the IR
* Integration tests now share the same data
* Added Yosys to CI for synthesis stats

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,13 +1,14 @@
 # Runs Pylint
 # Locally run `pre-commit install` then commit
 
-name: Pylint Linting
+name: pylint linting
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
+    types: [ready_for_review]
 
 jobs:
   build:
