--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -17,7 +17,8 @@ build:
   jobs:
     pre_build:
     - sphinx-apidoc -o docs/apidoc/ python2verilog
-    - python -m pip install -r tests/requirements.txt
+    - ls
+    - ls docs/
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
@@ -31,6 +32,6 @@ sphinx:
 # Optional but recommended, declare the Python requirements required
 # to build your documentation
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
-# python:
-#    install:
-#    - requirements: docs/requirements.txt
+python:
+   install:
+   - requirements: tests/requirements.txt
