--- a/.github/workflows/templated.yml
+++ b/.github/workflows/templated.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Build HTML
         run: |
           python3 -m pip install -r tests/requirements.txt
