--- a/.github/workflows/templated.yml
+++ b/.github/workflows/templated.yml
@@ -1,10 +1,12 @@
-name: Sphinx build
+name: docs
 
 on: push
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
         with:
