Updated docs and other minor updates (#60)

--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -1,34 +1,34 @@
-# Mimics readthedocs Sphinx commands
-# Locally run command at bottom of this file
+# Deploys Sphinx Docs to Github Pages
 
-name: sphinx docs
+name: docs
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.11"]
-
+    permissions:
+      contents: write
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8
-        python -m pip install sphinx
-    - name: Build Sphinx
-      run: |
-        cd docs/ && python -m sphinx -T -E -b html -d _build/doctrees -D language=en . _build/html
+      - uses: actions/checkout@v3
+      - name: Build HTML
+        run: |
+          python3 -m pip install sphinx
+          sphinx-apidoc -o docs/ python2verilog/ -F -H "python2verilog" -A "Kerry Wang"
+          printf "import os\nimport sys\nsys.path.insert(0, os.path.abspath(\"..\"))\nadd_module_names = False\n" | cat - docs/conf.py > temp && mv temp docs/conf.py
+          make -C docs/ html
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: html-docs
+          path: docs/_build/html/
+      - name: Deploy
+        if: ${{ github.ref == 'refs/heads/main' || github.ref == 'ref/heads/sphinx' }}
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: docs/_build/html
