--- a/.pylintrc
+++ b/.pylintrc
@@ -6,13 +6,13 @@ good-names=i, j, k, ir, e
 
 [MESSAGES CONTROL]
 disable =
-    fixme,
     too-few-public-methods,
     too-many-statements,
     too-many-return-statements,
     too-many-arguments,
     too-many-branches,
     duplicate-code,
+    cyclic-import,
     unused-import,
     exec-used,
     logging-fstring-interpolation
