replaced warnings with logging

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,10 @@ classifiers = [
 
 [tool.setuptools]
 "py-modules" = ["python2verilog"]
+
+[tool.pytest.ini_options]
+log_cli = true
+log_cli_level = "WARNING"
+log_cli_format = "%(levelname)s %(filename)s:%(lineno)s %(message)s"
+# log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
+# log_cli_date_format = "%Y-%m-%d %H:%M:%S"
