added cat on test

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,3 +34,4 @@ jobs:
         python3 -m pip install ..
         cp ../tests/integration/data/circle_lines/python.py .
         python3 -m python2verilog python.py
+        cat python.sv
